bk_ida/gccida/g1/expand_compound_operation
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6067:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6070:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6073:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)x[1].fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6083:29: error: use of undeclared identifier 'machine_mode'
v15 = gen_rtx_fmt_e( USE, ( machine_mode)*( ( unsigned __int8 *)x + 2), v11.rtx); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6084:18: error: expected expression
do_SUBST( ( rtx *)x->fld, v15); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6105:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6119:38: error: use of undeclared identifier 'machine_mode'
v16 = nonzero_bits( x->fld[0].rtx, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6120:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6123:37: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_e( ZERO_EXTEND, ( machine_mode)*( ( unsigned __int8 *)x + 2), v17.rtx); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6129:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6136:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6139:27: error: expected ')'
v30 = nonzero_bits( ( rtx)v26, ( machine_mode)v27); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6139:19: note: to match this '('
v30 = nonzero_bits( ( rtx)v26, ( machine_mode)v27); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6140:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v31.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6142:16: error: expected expression
return *( rtx *)( v31.rtwint + 8); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6146:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6165:29: error: expected expression
v32 = nonzero_bits( *( rtx *)( v1->fld[0].rtwint + 8), ( machine_mode)v21); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6165:58: error: use of undeclared identifier 'machine_mode'
v32 = nonzero_bits( *( rtx *)( v1->fld[0].rtwint + 8), ( machine_mode)v21); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6166:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v33.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/combine.c:6168:16: error: expected expression
return *( rtx *)( v33.rtwint + 8); 
               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_compound_operation/src/obj/combine.o] Error 1
